2007-11-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -connectAction]): the
	user infos are now posted as "application/x-www-form-urlencoded".
	So we have to have like a form has been posted.

2007-11-21  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-calendarList]): also returns the calendar of the current
	event. This is required	so the proper calender is selected when
	you view an event to which you don't have write access.

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -currentUserIsOwner]): 
	also returns true for super users.

2007-11-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-lookupImap4BodyPartKey:inContext:]): return a correct body part
	when "0" is requested, taking its mime-type into account.

	* UI/MailPartViewers/UIxMailRenderingContext.m
	([UIxMailRenderingContext -flatContentForPartPath:_partPath]):
	return content for part "0", which would be the message body.

2007-11-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([_UIxHTMLMailContentHandler
	-setContentEncoding:newContentEncoding]): new method that
	specifies an xml charset to return to the parser.
	([UIxMailPartHTMLViewer -flatContentAsString]): specifies the
	charset to the content handler before parsing.

	* SoObjects/Appointments/SOGoAppointmentObject.m: don't take an
	empty c_name as a valid response when looking up an event. Create
	one in that case instead.

2007-11-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/PreferencesUI/UIxPreferences.m ([UIxPreferences -signature]):
	returns the signature for the default identity of the default
	accouunt...
	([UIxPreferences -setSignature:newSignature]): accessor that sets
	the default signature.

	* UI/MailerUI/UIxMailAccountActions.m ([UIxMailAccountActions
	-composeAction]): append the message signature to the new draft.
