@@ -70,15 +70,18 @@
                fromFolder: (GCSFolder *) _folder
                      from: (NSCalendarDate *) _startDate
                        to: (NSCalendarDate *) _endDate
+		    title: (NSString *) title
                 component: (id) _component;
 
 - (NSArray * ) fetchFields: (NSArray *) _fields
                       from: (NSCalendarDate *) _startDate
                         to: (NSCalendarDate *) _endDate
+		     title: (NSString *) title
                  component: (id) _component;
 
 - (NSArray *) fetchCoreInfosFrom: (NSCalendarDate *) _startDate
                               to: (NSCalendarDate *) _endDate
+			   title: (NSString *) title
                        component: (id) _component;
 
 - (NSArray *) fetchFreeBusyInfosFrom: (NSCalendarDate *) _startDate
